# 202504-rust-command-line-applications

./: .gitignore  LICENSE  README.md
.devcontainer/rust-bookworm/: Dockerfile  devcontainer.json
grrs/: Cargo.toml
grrs/src/: lib.rs  main.rs
grrs/tests/: cli.rs
reqapi/: Cargo.toml
reqapi/src/: main.rs
