[package]
name = "grrs"
version = "0.1.0"
edition = "2024"

[profile.release]
#opt-level = "z"
strip = true
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.2"
predicates = "3.1.3"
